WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67570
REGRESSION (
r86268
): Fix for qt_networkAccessAllowed()
https://bugs.webkit.org/show_bug.cgi?id=67570
Summary
REGRESSION (r86268): Fix for qt_networkAccessAllowed()
Laszlo Gombos
Reported
2011-09-03 18:38:36 PDT
r86268
changed the USE(QT_BEARER) guard to ENABLE(QT_BEARER) - not consistently but only in one place. This seems an irrelevant change and made the guarded code never execute. QT_BEARER was introduced to manage BearerManager library dependency in Qt 4.6 however Qt 4.6 is no longer supported on trunk (see 81553), so this could be replaced by the existing QT_NO_BEARERMANAGEMENT QtNetwork guard.
Attachments
1st try
(6.58 KB, patch)
2011-09-03 18:46 PDT
,
Laszlo Gombos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Laszlo Gombos
Comment 1
2011-09-03 18:46:05 PDT
Created
attachment 106270
[details]
1st try
Noam Rosenthal
Comment 2
2011-09-03 18:57:29 PDT
Comment on
attachment 106270
[details]
1st try LGTM
WebKit Review Bot
Comment 3
2011-09-03 19:57:53 PDT
Comment on
attachment 106270
[details]
1st try Clearing flags on attachment: 106270 Committed
r94499
: <
http://trac.webkit.org/changeset/94499
>
WebKit Review Bot
Comment 4
2011-09-03 19:57:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug