REGRESSION (r86268): Fix for qt_networkAccessAllowed() https://bugs.webkit.org/show_bug.cgi?id=67570

Reviewed by Noam Rosenthal.

Source/WebCore:

No new tests as this change only removes dead code.
Support for Qt 4.6 has  been removed a while back.

* WebCore.pri:
* WebCore.pro:
* features.pri:
* platform/network/NetworkStateNotifier.h:
* platform/network/qt/NetworkStateNotifierQt.cpp:

Source/WebKit/qt:

Replace the ENABLE(QT_BEARER) guard with
!defined(QT_NO_BEARERMANAGEMENT) which is true by
default in Qt 4.7 or later versions.

* Api/qwebsettings.cpp:
(qt_networkAccessAllowed):


Canonical link: https://commits.webkit.org/83406@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94499 268f45cc-cd09-0410-ab3c-d52691b4dbfc