Source/WebCore/platform/network/NetworkStateNotifier.h
@@ -45,16 +45,11 @@ typedef const struct __SCDynamicStore * SCDynamicStoreRef;
 
 #include <QtCore/qglobal.h>
 
-#ifdef QT_NO_BEARERMANAGEMENT
-#undef WTF_USE_QT_BEARER
-#define WTF_USE_QT_BEARER 0
-#endif
-
 #endif
 
 namespace WebCore {
 
-#if (PLATFORM(QT) && USE(QT_BEARER))
+#if (PLATFORM(QT) && !defined(QT_NO_BEARERMANAGEMENT))
 class NetworkStateNotifierPrivate;
 #endif
 
@@ -66,7 +61,7 @@ public:
 
     bool onLine() const { return m_isOnLine; }
 
-#if (PLATFORM(QT) && USE(QT_BEARER))
+#if (PLATFORM(QT) && !defined(QT_NO_BEARERMANAGEMENT))
     void setNetworkAccessAllowed(bool);
 #elif PLATFORM(CHROMIUM) || PLATFORM(EFL)
     void setOnLine(bool);
@@ -95,13 +90,13 @@ private:
     HANDLE m_waitHandle;
     OVERLAPPED m_overlapped;
 
-#elif PLATFORM(QT) && USE(QT_BEARER)
+#elif (PLATFORM(QT) && !defined(QT_NO_BEARERMANAGEMENT))
     friend class NetworkStateNotifierPrivate;
     NetworkStateNotifierPrivate* p;
 #endif
 };
 
-#if !PLATFORM(MAC) && !PLATFORM(WIN) && !(PLATFORM(QT) && USE(QT_BEARER))
+#if !PLATFORM(MAC) && !PLATFORM(WIN) && !(PLATFORM(QT) && !defined(QT_NO_BEARERMANAGEMENT))
 
 inline NetworkStateNotifier::NetworkStateNotifier()
     : m_isOnLine(true)
